--- a/Nyx/Exec/LyA/GNUmakefile
+++ b/Nyx/Exec/LyA/GNUmakefile
@@ -25,7 +25,7 @@ TINY_PROFILE  = TRUE
 
 PRECISION = DOUBLE
 USE_SINGLE_PRECISION_PARTICLES = TRUE
-DEBUG     = TRUE
+DEBUG     = FALSE
 
 # physics
 DIM      = 3
