--- a/Nyx/Exec/LyA/GNUmakefile
+++ b/Nyx/Exec/LyA/GNUmakefile
@@ -26,6 +26,7 @@ TINY_PROFILE  = TRUE
 PRECISION = DOUBLE
 USE_SINGLE_PRECISION_PARTICLES = TRUE
 DEBUG     = FALSE
+TEST = FALSE
 
 # physics
 DIM      = 3
