Removed a significant amount of dead code and re-wrote large aspects of core algorithm. The last working reference to old partitionGrids stuff is in previous commit.

--- a/Nyx/Exec/LyA/GNUmakefile
+++ b/Nyx/Exec/LyA/GNUmakefile
@@ -18,10 +18,10 @@ SUNDIALS_ROOT ?= $(TOP)/subprojects/sundials/instdir
 #SUNDIALS_ROOT ?=  ${CURDIR}/$(TOP)/../sundials/instdir
 #USE_CVODE_LIBS = TRUE
 
-PROFILE       = TRUE
-TRACE_PROFILE = TRUE
-COMM_PROFILE  = TRUE
-TINY_PROFILE  = FALSE
+PROFILE       = FALSE
+TRACE_PROFILE = FALSE
+COMM_PROFILE  = FALSE
+TINY_PROFILE  = TRUE
 
 PRECISION = DOUBLE
 USE_SINGLE_PRECISION_PARTICLES = TRUE
